# c-ast-rs

./: Cargo.toml  shell.nix  test.c
src/: main.rs
