[package]
name = "c-ast"
version = "0.1.0"
authors = ["Kai Harries <kai.harries@posteo.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1.0"
lang-c =  "^0.10"
log = "^0.4"
shellexpand = "^2.1"
simple_logger = "^1.11"
structopt = "^0.3"
structopt-flags = "^0.3"
